# atlas

./: .gitignore  README.md  pyproject.toml
configs/: ace_atlas_transformer_100m_sp32k_v1.json  dense_100m.json  dense_100m_sp32k_v2.json  dense_300m.json  dense_50m.json  dense_small.json  dense_tiny_debug.json  hybrid_100m.json  hybrid_100m_gru.json  hybrid_100m_gru_sp32k_v1.json  hybrid_300m.json  hybrid_300m_gru.json  hybrid_300m_gru_span.json  hybrid_300m_gru_span_adapter.json  hybrid_50m.json  hybrid_50m_gru.json  hybrid_small.json  hybrid_tiny_debug.json  train_code_mix_300m_hybrid_continue_v2.json  train_codesearchnet_300m_hybrid_continue.json  train_dev.json  train_executable_solution_sft_100m_ace_atlas_transformer_v1.json  train_executable_solution_sft_100m_hybrid_from_mixed_base_v1.json  train_executable_solution_sft_100m_hybrid_sp32k_v1.json  train_executable_solution_sft_300m_hybrid_v7.json  train_mixed_code_text_base_100m_ace_atlas_transformer_distill_v1.json  train_mixed_code_text_base_100m_ace_atlas_transformer_v1.json  train_mixed_code_text_base_100m_dense_sp32k_v2.json  train_mixed_code_text_base_100m_hybrid_sp32k_v1.json  train_mixed_code_text_base_100m_hybrid_v1.json  train_supervised_code_tasks_300m_hybrid_v5.json  train_supervised_code_tasks_300m_hybrid_v6.json  train_task_aligned_code_300m_hybrid_span_adapter_v1.json  train_task_aligned_code_300m_hybrid_span_v1.json  train_task_aligned_code_300m_hybrid_v3.json  train_task_aligned_code_300m_hybrid_v4.json  train_tinystories_300m_hybrid_t4_fp32_no_ckpt.json  train_tinystories_first_compare.json  (+2 more)
(+76 files in other folders)
